# development-mcp

./: .github-actions.yml  Cargo.toml  Dockerfile  MCP_MIDDLEWARE_GUIDE.md
.github/workflows/: release.yml
docs/: DIOXUS_FULLSTACK_DESIGN_PATTERS.md  cargo-dependencies-guide.md  mcp-development-guide.md
src/: main.rs  settings.rs
src/app/: app_ctx.rs
src/http/: errors.rs  mod.rs  start_up.rs
src/http/controllers/: mod.rs
src/mcp/: app_bootstrap_resource.rs  cargo_dependencies_resource.rs  ci_utils_resource.rs  dioxus_bootstrap_resource.rs  dioxus_fullstack_patterns_resource.rs  dioxus_utils_resource.rs  flurl_prompt.rs  flurl_resource.rs  http_actions_resource.rs  mcp_prompt.rs  mcp_resource.rs  mod.rs  my_grpc_extensions_resource.rs  my_no_sql_entity_patterns_resource.rs  my_postgres_resource.rs  my_ssh_resource.rs  my_tcp_sockets_resource.rs  rust_extensions_resource.rs  scripts.rs
